<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/feed"
            android:title="@string/Feedback_snav"
            android:icon="@drawable/baseline_feedback_24"
            android:iconTint="@color/white" />

    </group>
    <group
        android:id="@+id/group2"
        >
        <item
            android:id="@+id/translate"
            android:title="@string/Translate_snav"
            android:icon="@drawable/translate"
            android:iconTint="@color/white" />
    </group>
    <group android:id="@+id/group3">
        <item
            android:id="@+id/darkMood"
            android:title="@string/DarkMood"
            android:icon="@drawable/dark_mood"
            android:iconTint="@color/white" />
    </group>
</menu>