<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EDF7F6"
    tools:context=".Age_Calculator_SoftSow.privacy_policy">

    <!-- Top Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#AD9980"
        android:padding="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_back"
            android:id="@+id/arrow_back"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Privacy_Policy_privacy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <!-- Privacy Policy Section -->
            <TextView
                android:id="@+id/privacyPolicyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_text_privacy"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

            <!-- Data Security -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Data_Security_privacy"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_text_privacy"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

            <!-- App Functionality -->
            <TextView
                android:id="@+id/functionalityHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/App_functionality_privacy"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/functionalityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_text_privacy"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

            <!-- Zodiac Sign Details -->
            <TextView
                android:id="@+id/zodiacHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Zodiac_Calculation_privacy"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/zodiacText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_text_privacy"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

            <!-- Age Calculation Details -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Calculation_Method_privacy"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_text_privacy"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

            <!-- Limitations -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Important_Notes_privacy"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_text_privacy"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bottom_nav"
        app:menu="@menu/bottom_nav"
        android:paddingTop="17dp"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        />

</LinearLayout>
