<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EDF7F6"
    tools:context=".Age_Calculator_SoftSow.setting">

    <!-- Top Bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#AD9980"
        android:padding="10dp">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_back"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/About_us_aboutUs"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>



    <!-- ScrollView for Setting Content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <!-- App Description -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_app_aboutUs"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcometo_aboutUs"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

            <!-- Features Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/key_feature_aboutUs"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accurate_age_aboutUs"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

            <!-- Settings Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/App_Settings"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Themse_choose_aboutUs"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />

            <!-- Contact Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us_aboutUs"
                android:textSize="18sp"
                android:textColor="#2B4B65"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_feel_aboutUs"
                android:textSize="16sp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:justificationMode="inter_word" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bottom_nav"
        app:menu="@menu/bottom_nav"
        android:paddingTop="17dp"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        />

</LinearLayout>
